# ARLK

./: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  COPYRIGHT.TXT
include/: configure.h.bak
include/ARLK/: ARLK.h  BaseClassifier.h  KNNClassifier.h  LibTypeDefs.h  SVMClassifier.h  SkeData.h
samples/HAR_App/: HAR_App.pro  loaddatadlg.cpp  loaddatadlg.h  loaddatadlg.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  setparameterdlg.cpp  setparameterdlg.h  setparameterdlg.ui
samples/HAR_App/QtKinectWrapper/: QKinectWrapper.cpp
samples/HAR_App/train_data/: LeftFrontFoot.skd  LeftFrontHand.skd  LeftSideHand.skd  LeftSideKick.skd  LeftWaveLeft.skd  LeftWaveRight.skd  Push.skd  RightFrontFoot.skd  RightFrontHand.skd  RightSideHand.skd  RightSideKick.skd  RightWaveLeft.skd  RightWaveRight.skd  StandStill.skd
src/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~
src/ARLK/: BaseClassifier.cpp  KNNClassifier.cpp  SVMClassifier.cpp  SkeData.cpp
win32/samples/ActionInteract0/: ActionInteract0.cpp  ActionInteract0.h  ActionInteract0.idl  ActionInteract0.rc  ActionInteract0Dlg.cpp  ActionInteract0Dlg.h  ActionInteract0_h.h  CMakeLists.txt  CMakeLists.txt.bak  DlgProxy.cpp  DlgProxy.h  MainModel.cpp  MainModel.h  ParametersDlg.cpp  ParametersDlg.h  resource.h  stdafx.cpp
win32/samples/ActionInteract0/res/: ActionInteract0.rc2
win32/test_skd/: 07.skd  08.skd  09.skd  10.skd  11.skd  12.skd  13.skd  14.skd  15.skd  16.skd  17.skd  18.skd  19.skd  20.skd  21.skd  22.skd  23.skd  24.skd  25.skd  26.skd  27.skd  28.skd  29.skd  30.skd  31.skd  32.skd  33.skd
(+15 files in other folders)
